fix overflow issue with TOC

--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -82,7 +82,8 @@ main[data-wrapper] {
     
 
     .toc-sticky {
-        @apply sticky top-24;
+        @apply sticky top-24 overflow-y-auto overflow-x-visible;
+        height: calc(100vh - theme("spacing.24"));
     }
 
     .toc-title {
